--- a/style.css
+++ b/style.css
@@ -5,3 +5,15 @@ body {
 input[type=checkbox], input[type=submit] {
   margin: 0.5em 0;
 }
+
+table {
+  border-collapse: collapse;
+}
+
+table td, table th {
+  border: 1px solid;
+}
+
+table tr:nth-child(2n), table th {
+  background-color: #ddd;
+}
