update consent text as IPv4 hashes aren't anonymous

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -25,7 +25,7 @@
 		{{/options}}
 		<br>
 		<input name="consent" id="checkbox-consent" type="checkbox" required>
-		<label for="checkbox-consent">Ich erlaube, dass, um Mehrfachantworten zu vermeiden, meine IP-Adresse anonymisiert gespeichert wird und dass beim Absenden ein Cookie (mit welchem ich nicht identifiziert werden kann) angelegt wird.</label>
+		<label for="checkbox-consent">Ich erlaube, dass, um Mehrfachantworten zu vermeiden, meine IP-Adresse gespeichert wird und dass beim Absenden ein Cookie in meinem Browser angelegt wird.</label>
 		<br>
 		<br>
 		<input type="submit" value="Einsenden">
