--- a/templates/results.html
+++ b/templates/results.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-	<meta charset="UTF-8">
-	<title>Ergebnisse - {{#if votingname}}{{votingname}}-{{/if}}Abstimmung</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css" media="all">
-</head>
-<body>
-	<h1>Abstimmung{{#if votingname}}: {{votingname}}{{/if}}</h1>
-	<h2>Ergebnisse</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <title>
+      Ergebnisse - {{#if votingname}}{{votingname}}-{{/if}}Abstimmung
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" media="all" />
+  </head>
+  <body>
+    <h1>Abstimmung{{#if votingname}}: {{votingname}}{{/if}}</h1>
+    <h2>Ergebnisse</h2>
 
-	{{#if canvote}}
-	<a href="/vote">Zum Abstimmen</a>
-	{{/if}}
+    {{#if canvote}}
+    <a href="/vote">Zum Abstimmen</a>
+    {{/if}} {{#if datemin}} {{#if datemax}}
+    <p>
+      Abstimmen {{#unless votingover}} ist {{else}} war {{/unless}}möglich vom
+      {{datemin}} bis zum {{datemax}}.
+    </p>
+    {{else}}
+    <p>
+      Abstimmen {{#unless votingover}} ist {{else}} war {{/unless}}möglich ab
+      dem {{datemin}}.
+    </p>
+    {{/if}} {{else}} {{#if datemax}}
+    <p>
+      Abstimmen {{#unless votingover}} ist {{else}} war {{/unless}}möglich bis
+      zum {{datemax}}.
+    </p>
+    {{/if}} {{/if}} {{#ifeq nvoters 1}}
+    <p>Eine Person hat abgestimmt.</p>
+    {{else}}
+    <p>{{nvoters}} Personen haben abgestimmt.</p>
+    {{/ifeq}}
 
-	{{#if datemin}}
-	{{#if datemax}}
-	<p>Abstimmen {{#unless votingover}} ist {{else}} war {{/unless}}möglich vom {{datemin}} bis zum {{datemax}}.</p>
-	{{else}}
-	<p>Abstimmen {{#unless votingover}} ist {{else}} war {{/unless}}möglich ab dem {{datemin}}.</p>
-	{{/if}}
-	{{else}}
-	{{#if datemax}}
-	<p>Abstimmen {{#unless votingover}} ist {{else}} war {{/unless}}möglich bis zum {{datemax}}.</p>
-	{{/if}}
-	{{/if}}
-
-	{{#ifeq nvoters 1}}
-	<p>Eine Person hat abgestimmt.</p>
-	{{else}}
-	<p>{{nvoters}} Personen haben abgestimmt.</p>
-	{{/ifeq}}
-
-	<table>
-		<thead>
-			<th>Option</th>
-			<th>Stimmen</th>
-		</thead>
-		<tbody>
-			{{#options}}
-			<tr>
-				<td>{{name}}</td>
-				<td>{{votes}}</td>
-			</tr>
-			{{/options}}
-		</tbody>
-	</table>
-</body>
+    <table>
+      <thead>
+        <th>Option</th>
+        <th>Stimmen</th>
+      </thead>
+      <tbody>
+        {{#options}}
+        <tr>
+          <td>{{name}}</td>
+          <td>{{votes}}</td>
+        </tr>
+        {{/options}}
+      </tbody>
+    </table>
+  </body>
 </html>
