--- a/templates/vote.html
+++ b/templates/vote.html
@@ -7,8 +7,28 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" media="all" />
+    <script type="text/javascript" src="popup.js"></script>
+    <script type="text/javascript" src="vote-interactive.js"></script>
+    <script type="text/javascript">
+      let prioritized = [];
+      {{#projects}}
+      prioritized.push("{{code}}");
+      {{/projects}}
+      console.log(prioritized);
+    </script>
   </head>
-  <body>
+  <body onload="loadPopup();storePositioning();">
+    <div id="popup">
+      <div id="popup-inner">
+        <h2 id="popup-heading">ORGA-Name</h2>
+        <a id="popup-link" target="_blank" href="">Link zur Spendenaktion</a>
+        <p id="popup-text">Text</p>
+      </div>
+      <div id="popup-inner2">
+        <button id="popup-ok">OK</button>
+      </div>
+    </div>
+
     <h1>Abstimmung{{#if votingname}}: {{votingname}}{{/if}}</h1>
     <h2>Abstimmen</h2>
 
@@ -16,21 +36,53 @@
     <p>Die Abstimmung ist geöffnet bis {{datemax}}.</p>
     {{/if}}
 
-    <a href="/results">Zu den Ergebnissen</a>
-    <p>Maximal 5 auswählbar</p>
+    <p>
+      Nutze die Pfeile, um die Organisationen zu sortieren. Stelle dir dabei die
+      Frage: Welche Organisationen sollten lieber finanzielle Unterstützung von
+      uns erhalten?
+    </p>
 
+    <br />
     <form enctype="multipart/form-data" method="post" action="/submit">
-      {{#options}}
-      <input name="{{id}}" id="checkbox-{{id}}" type="checkbox" />
-      <label for="checkbox-{{id}}">{{name}}</label>
-      <br />
-      {{/options}}
+      <p><i>sollte von uns am meisten unterstützt werden</i></p>
+      <div class="items">
+        {{#projects}}
+        <div class="item" id="item-{{code}}">
+          <input
+            style="display: none"
+            name="{{code}}"
+            id="rank-{{code}}"
+            type="text"
+          />
+          <div class="flexrow" style="align-items: center">
+            <div class="flexcolumn pad-right">
+              <span class="movebtn" onclick="moveUp('{{code}}')">/\</span>
+              <span class="movebtn" onclick="moveDown('{{code}}')">\/</span>
+            </div>
+            <div class="flexcolumn flex1">
+              <span class="category">{{category}}</span>
+              <span class="name flex1">{{name}}</span>
+            </div>
+            <div class="flexcolumn">
+              <a
+                class="pad infobtn"
+                style="vertical-align: center"
+                href="javascript:showPopup('{{name}}','{{link}}','{{#newlinetobr}}{{description}}{{/newlinetobr}}')"
+                >i</a
+              >
+            </div>
+          </div>
+        </div>
+        {{/projects}}
+      </div>
+      <p><i>sollte von uns am wenigsten unterstützt werden</i></p>
+
       <br />
       <input name="consent" id="checkbox-consent" type="checkbox" required />
       <label for="checkbox-consent"
-        >Ich erlaube, dass, um Mehrfachantworten zu vermeiden, meine IP-Adresse
-        gespeichert wird und dass beim Absenden ein Cookie in meinem Browser
-        angelegt wird.</label
+        >Ich erlaube, dass, um Mehrfachantworten zu vermeiden, mein Nutzername
+        mit meinem Ergebnis gespeichert wird. Diese Assoziation wird bei
+        Ergebnisermittlung nicht berücksichtigt.</label
       >
       <br />
       <br />
